--- a/AppCommander/View/MainWindow.xaml
+++ b/AppCommander/View/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        Title="BioBS" Height="880" Width="1280" ResizeMode="CanMinimize">
+        Title="App Commander" Height="880" Width="1280" ResizeMode="CanMinimize">
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -62,58 +62,7 @@
                             <TextBlock Text="Gesamtbetrag: " Style="{StaticResource DefaultTextBlockStyle}" Width="100" />
                             <TextBlock Text="{Binding CurrentOrder.TotalAmount}" Style="{StaticResource DefaultTextBlockStyle}" />
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="2 2 2 2">
-                            <TextBlock Text="Bestellstatus: " Style="{StaticResource DefaultTextBlockStyle}" Width="100" />
-                            <ComboBox x:Name="StatusBox" SelectedIndex="0">
-                                <ComboBoxItem Content="in Arbeit" />
-                                <ComboBoxItem Content="abgeschlossen" />
-                            </ComboBox>
-                            <!--<TextBox Text="{Binding CurrentOrder.Status}" Template="{StaticResource TextBoxBaseControlTemplate}" Style="{StaticResource DefaultTextBoxStyle}" />-->
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="2 2 2 2">
-                            <TextBlock Text="Lieferart: " Style="{StaticResource DefaultTextBlockStyle}" Width="100" />
-                            <ComboBox x:Name="DeliveryBox" SelectedIndex="1">
-                                <ComboBoxItem Content="--- Bitte auswählen ---" />
-                                <ComboBoxItem Content="Abholung" />
-                                <ComboBoxItem Content="Lieferung" />
-                            </ComboBox>
-                            <!--<TextBox Text="{Binding CurrentOrder.ProvidesType}" Template="{StaticResource TextBoxBaseControlTemplate}" Style="{StaticResource DefaultTextBoxStyle}" />-->
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="2 2 2 2">
-                            <TextBlock Text="Bezahlart: " Style="{StaticResource DefaultTextBlockStyle}" Width="100" />
-                            <ComboBox x:Name="PayBox" SelectedIndex="1">
-                                <ComboBoxItem Content="--- Bitte auswählen ---" />
-                                <ComboBoxItem Content="Bar" />
-                                <ComboBoxItem Content="Karte" />
-                                <ComboBoxItem Content="Rechnung" />
-                            </ComboBox>
-                            <!--<TextBox Text="{Binding CurrentOrder.PaymentType}" Template="{StaticResource TextBoxBaseControlTemplate}" Style="{StaticResource DefaultTextBoxStyle}" />-->
-                        </StackPanel>
-                        <!-- TODO: use enum for view -->
-                        <TextBox Text="{Binding CurrentOrder.Remarks}" Height="50" Width="300" Margin="2 2 2 2" />
-                    </StackPanel>
-
-                    <TextBlock Text="Ausgewählte Positionen: " FontSize="14" FontWeight="Bold" />
-
-                    <ItemsControl
-                ItemsSource="{Binding CurrentOrder.PositionList}"
-                ItemTemplate="{StaticResource OrderItemTemplate}">
-                        <!-- TODO: use own template...? -->
-                    </ItemsControl>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Border CornerRadius="5" Background="#dcd9b0" Margin="0 0 0 10">
-                            <Border.Effect>
-                                <DropShadowEffect BlurRadius="7" ShadowDepth="2" />
-                            </Border.Effect>
-                            <Button Content="Commit Order" Command="{Binding CommitOrderCommand}" CommandParameter="{Binding IsOrderCommitted}" Style="{StaticResource ButtonDetailsOverviewSideBar}" />
-                        </Border>
-                        <Border CornerRadius="5" Background="#dcd9b0" Margin="5 0 0 10">
-                            <Border.Effect>
-                                <DropShadowEffect BlurRadius="7" ShadowDepth="2" />
-                            </Border.Effect>
-                            <Button Content="Cancel" Command="{Binding CancelOrderCommand}" CommandParameter="{Binding IsOrderCommitted}" Style="{StaticResource ButtonDetailsOverviewSideBar}" />
-                        </Border>
-                    </StackPanel>
+                    </StackPanel>   
                 </StackPanel>
 
             </StackPanel>
