--- a/AppCommander/View/MainWindow.xaml
+++ b/AppCommander/View/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:uc="clr-namespace:AppCommander.Common.UserControls"
         Title="App Commander" Height="880" Width="1280" ResizeMode="CanMinimize">
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
@@ -51,18 +52,63 @@
                             </Style>
                         </ItemsControl.Style>
                     </ListView>
+                    <Button Content="+" Command="{Binding CmdAddApp}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Vertical" Visibility="{Binding IsEditViewActive, Converter={StaticResource BooleanToVisibilityConverter}}">
-                    <StackPanel x:Name="CurrentCustomerDetails">
-                        <TextBlock Text="Bestellübersicht" FontWeight="Bold" FontSize="24" />
-                    </StackPanel>
-                    <StackPanel x:Name="OrderOverview" Orientation="Vertical" Margin="0 10 0 30">
-                        <StackPanel Orientation="Horizontal" Margin="2 2 2 2">
-                            <TextBlock Text="Gesamtbetrag: " Style="{StaticResource DefaultTextBlockStyle}" Width="100" />
-                            <TextBlock Text="{Binding CurrentOrder.TotalAmount}" Style="{StaticResource DefaultTextBlockStyle}" />
+                    <Grid x:Name="EditGrid" DataContext="{Binding SelectedApp}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="2*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+
+                        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
+                            <Image Source="{Binding Picture, Converter={StaticResource NameToImagePathConverter}}" />
+                            <uc:RatingControl />
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="CHF: " />
+                                <TextBlock Text="{Binding Price}" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal">
+                                <ListBox ItemsSource="{Binding ValidPlattforms}">
+                                  
+                                </ListBox>
+                            </StackPanel>
                         </StackPanel>
-                    </StackPanel>   
+                        
+                        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBox Text="{Binding Name}" />
+                                <TextBox Text="{Binding XMLVersion}" />
+                            </StackPanel>
+                            <TextBox Text="{Binding Description}" />
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="25" />
+                                    <RowDefinition Height="25" />
+                                    <RowDefinition Height="25" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="Android" Grid.Column="0" Grid.Row="0" />
+                                <TextBlock Text="1.0" Grid.Column="1" Grid.Row="0" />
+                                <TextBlock Text="Iphone" Grid.Column="0" Grid.Row="1" />
+                                <TextBlock Text="1.0" Grid.Column="1" Grid.Row="1" />
+                                <TextBlock Text="Windows" Grid.Column="0" Grid.Row="2" />
+                                <TextBlock Text="1.0" Grid.Column="1" Grid.Row="2" />
+                            </Grid>
+                            
+                        </StackPanel>
+
+                        <Button  Width="200" Height="50" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Command="{Binding ElementName=AppList, Path=DataContext.CmdSaveApp}" CommandParameter="{Binding}" />
+                    </Grid>
+
                 </StackPanel>
 
             </StackPanel>
