--- a/AppCommander/View/MainWindow.xaml
+++ b/AppCommander/View/MainWindow.xaml
@@ -68,7 +68,7 @@
 
                         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical">
                             <Image Source="{Binding Picture, Converter={StaticResource NameToImagePathConverter}}" />
-                            <uc:RatingControl />
+                            <uc:RatingControl Width="100" Height="25" HorizontalAlignment="Left" />
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="CHF: " />
                                 <TextBlock Text="{Binding Price}" />
@@ -105,8 +105,10 @@
                             </Grid>
                             
                         </StackPanel>
-
-                        <Button  Width="200" Height="50" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Command="{Binding ElementName=AppList, Path=DataContext.CmdSaveApp}" CommandParameter="{Binding}" />
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1">
+                            <Button Content="Save" Width="200" Height="50" HorizontalAlignment="Right" Command="{Binding ElementName=AppList, Path=DataContext.CmdSaveApp}" CommandParameter="{Binding}" />
+                            <Button Content="Remove" Width="200" Height="50" HorizontalAlignment="Left" Command="{Binding ElementName=AppList, Path=DataContext.CmdRemoveApp}" CommandParameter="{Binding}" />
+                        </StackPanel>
                     </Grid>
 
                 </StackPanel>
